static/css/style.css
body {
    font-family: Verdana, Tahoma, sans-serif;
    line-height: 1.6;
    color: #333;
    background-image: url('../images/background.jpg');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    min-height: 100vh;
    margin: 0;
    padding: 0;
}

.main-header {
    position: fixed;
    width: 100%;
    background: rgba(255, 255, 255, 0.35);
    backdrop-filter: blur(5px);
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1% 0%;
    margin: 0;
}

.logo {
    font-size: 1.5rem;
    font-weight: 600;
    padding: 0.5px;
    color: #2c5aa0;
    transition: all 0.3s ease;
    text-decoration: none;
}

.nav-side {
    flex-basis: 200px;
}

.logo:hover {
    color: #4a90e2;
}

.menu-hamburguer,
.nav-mobile,
.language-switcher-mobile {
    display: none;
}

.hamburguer {
    display: none;
    flex-direction: column;
    cursor: pointer;
    padding: 0.5rem;
}

.bar {
    width: 25px;
    height: 3px;
    background-color: #2c5aa0;
    margin: 3px 0;
    transition: all 0.3s ease;
    border-radius: 2px;
}

.nav-links {
    display: flex;
    align-items: center;
    justify-content: center;
    list-style: none;
    gap: 0.5rem;
    margin: 0;
    flex: 1;
}

.nav-link {
    color: #333;
    text-decoration: none;
    font-weight: 500;
    transition: all 0.3s ease;
}

.nav-link:hover {
    color: blue;
}

.nav-link:active {
    color: #4a90e2;
}

.language-switcher {
    display: flex;
    align-items: center;
    justify-content: end;
    padding-right: 3px;
    gap: 0.4rem;
    font-size: 0.75rem;
}

.lang {
    color: #333;
    text-decoration: none;
    transition: all 0.3s ease;
}

.lang:hover {
    color: blue;
}

.lang-divider {
    color: black;
    opacity: 0.3;
}


/* MEDIA QUERIES */

/* Tablet */
@media screen and (max-width: 768px) {
    .nav-mobile {
        display: flex;
        flex-direction: column;
        position: fixed;
        top: 100%;
        width: 100%;
        background: rgba(255, 255, 255, 0.45);
        backdrop-filter: blur(5px);
        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
        opacity: 0;
        visibility: hidden;
        pointer-events: none;
        transform: translateY(-100%);
        transition: all 0.3s ease;
        z-index: 1000;
    }

    .nav-links,
    .language-switcher {
        display: none;
    }

    .nav-links-mobile {
        display: flex;
        padding: 0;
        flex-direction: column;
        align-items: center;
        list-style: none;
        gap: 0.7rem;
    }

    .language-switcher-mobile {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        padding: 0.5rem;
        padding-left: 2.5rem;
        gap: 1.5rem;
    }

    .nav-link {
        display: block;
        text-align: center;
        padding: 1rem;
        width: 100%;
    }

    .hamburguer {
        display: flex;
        flex-direction: column;
        cursor: pointer;
        margin-left: auto;
        z-index: 1100;
    }

    .menu-hamburguer:checked ~ .nav-mobile {
        transform: translateY(0);
        opacity: 1;
        visibility: visible;
        pointer-events: auto;
    }

    .menu-hamburguer:checked ~ .hamburguer .bar:nth-child(1) {
        transform: rotate(45deg) translate(6px 6px);
    }

    .menu-hamburguer:checked ~ .hamburguer .bar:nth-child(2) {
        opacity: 0;
    }

    .menu-hamburguer:checked ~ .hamburguer .bar:nth-child(3) {
        transform: rotate(-45deg) translate(6px -6px);
    }
}

/* Mobile */
@media screen and (max-width: 480px) {
    .navbar {
        padding: 1rem 5%;
    }

    .logo {
        font-size: 1.5rem;
    }

    .nav-menu {
        padding: 1.5rem;
    }

    .language-switcher {
        width: 100%;
        justify-content: center;
    }
}

